--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -4,5 +4,99 @@
     "you_can_change_language":"You can change your language",
     "select_a_language":"Select a language",
     "home":"Home",
-    "back_to_home":"Back to home" 
+    "back_to_home":"Back to home", 
+    "change_theme": "Change Theme",
+    "next": "Next",
+    "scan":"Scan",
+    "app_name":"Aetherium Saloon",
+    "welcome_to":"Welcome To",
+    "aetherium": "Aetherium",
+    "fragrances_perfumes":"Fragrances & Perfumes",
+    "onboarding_description": "Amet Minim mollit non deserunt ullamco est sit aliqua dc",
+    "appdeo": "AP/Deo",
+    "skin_care":"Skin Care",
+    "avanti":"Avanti",
+    "inzia": "Inzia",
+    "invia" : "Invia",
+    "accedi": "Accedi",
+    "login": "Login",
+    "email":"Email",
+    "password": "Passowrd",
+    "forget_password":"Forget password",
+    "email_is_not_valid":"Email is not valid",
+    "email_should_not_be_empty":"Email should not be empty",
+    "password_must_be_8_characters_long":"Password must be 8 characters long",
+    "welcome":"Welcome",
+    "loyality_card": "Loyality Card",
+    "points_collected":"Pointes collected",
+    "active":"Active",
+    "name":"Name",
+    "surname":"Surname",
+    "level":"level",
+    "expiray_date":"Expiary Date",
+    "invite_friends":"Invite Friends",
+    "invitation_description":"Bring a Friend to the shop and get 25 points",
+    "my_appointments":"My Appointments",
+    "upcomming_appointments":"Upcoming Appointments",
+    "new_client":"New Client",
+    "client_details":"Client Details",
+    "settigns":"Settings",
+    "consultations":"Consultations",
+    "notifications":"Notifications",
+    "account_info_detail":"My Information",
+    "logout":"Logout",
+    "profile":"Profile",
+    "terms_of_services":"Terms of Service",
+    "privacy":"Privacy",
+    "phone+_number":"Phone Number",
+    "gender":"Gender",
+    "address":"Address",
+    "birthday":"Birthday",
+    "appointments":"Appointmentes",
+    "appointment_description":"Discover and book beauty & wellness professionals near you. Your scheduled appointments will show up here.",
+    "empty_agenda_message":"Click on the button at the bottom right to make a new booking. For any doubt or question, please contact us via email or WhatsApp, you can find all the information in the contact section, by going to your user profile.",
+    "service_treatments":"Services/Treatments",
+    "choose_date_and_time":"Choose Date & Time",
+    "available_slot":"Available Slot",
+    "added_appointmetns":"Added Appointments",
+    "confirm_appointment":"Confirm Appointment",
+    "congratulations":"Congratulations",
+    "your_appointment":"Your appointment",
+    "client_creating_message_I":"Your client has been created,",
+    "client_creation_message_II":"Well done!",
+    "booking_is_successfull":"Booking is successfull",
+    "appointment_details":"Appointments - Details",
+    "service_treatment_duration":"Service/Treatment",
+    "service_treatment_category":"Service Treatment",
+    "price":"Price",
+    "total_price":"Total Price",
+    "shop_phone":"Shop ph",
+    "notes":"Note:",
+    "cancel":"Cancel",
+    "edit":"Edit",
+    "flourish_essentials":"Flourish Essentials",
+    "contacts":"Contacts",
+    "time":"Time",
+    "opening_hours_of_the_shop":"Opening time",
+    "description":"Description",
+    "beauty_specialist":"Beauty Specialist",
+    "select_client":"Select Client",
+    "email_is_required":"Email is required",
+    "name_is_required":"Name is required",
+    "surname_is_required":"Surname is required",
+    "address_is_required":"Address is Required",
+    "number_is_required":"Number is required",
+    "number_is_not_valid":"Number is not valid",
+    "see_all":"See All",
+    "no_appointments":"No appointments",
+    "no_events_available":"No Events available",
+    "events":"Events",
+    "search":"Search",
+    "services":"Services",
+    "by":"By",
+    "past":"Past",
+    "upcomming":"Upcomming",
+    "scheduled_appointments":"Scheduled Appointments",
+    "no_consultations":"No Consultations"
+
 }
