Fix issues and added google calendar

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -17,21 +17,28 @@
     "skin_care":"Skin Care",
     "avanti":"Avanti",
     "inzia": "Inzia",
-    "invia" : "Invia",
-    "accedi": "Accedi",
+    "send" : "Send",
+    "sign_in": "Sign in",
     "login": "Login",
     "email":"Email",
     "password": "Passowrd",
+    "forget_password?":"Forget password?",
     "forget_password":"Forget password",
     "email_is_not_valid":"Email is not valid",
     "email_should_not_be_empty":"Email should not be empty",
     "password_must_be_8_characters_long":"Password must be 8 characters long",
+    "a_password_reset_email_has_been_sent_to":"A password reset email has been sent to",
+    "email_already_in_use":"Email already in use",
+    "user_not_found":"User not found",
     "welcome":"Welcome",
     "loyality_card": "Loyality Card",
+    "points":"Points",
     "points_collected":"Pointes collected",
     "active":"Active",
+    "telephone":"Telephone",
     "name":"Name",
     "surname":"Surname",
+    
     "level":"level",
     "expiray_date":"Expiary Date",
     "invite_friends":"Invite Friends",
@@ -48,6 +55,7 @@
     "profile":"Profile",
     "terms_of_services":"Terms of Service",
     "privacy":"Privacy",
+    "number":"Number",
     "phone+_number":"Phone Number",
     "gender":"Gender",
     "address":"Address",
@@ -56,6 +64,7 @@
     "appointment_description":"Discover and book beauty & wellness professionals near you. Your scheduled appointments will show up here.",
     "empty_agenda_message":"Click on the button at the bottom right to make a new booking. For any doubt or question, please contact us via email or WhatsApp, you can find all the information in the contact section, by going to your user profile.",
     "service_treatments":"Services/Treatments",
+    "service_details":"Service Details",
     "choose_date_and_time":"Choose Date & Time",
     "available_slot":"Available Slot",
     "added_appointmetns":"Added Appointments",
@@ -70,29 +79,41 @@
     "service_treatment_category":"Service Treatment",
     "price":"Price",
     "total_price":"Total Price",
+    "total":"Total",
     "shop_phone":"Shop ph",
     "notes":"Note:",
     "cancel":"Cancel",
     "edit":"Edit",
+    "not_a_valid_number":"Not a valid number",
+    "phone_is_required":"Phone is required",
+    "tier":"Tier",
+    "date":"Date",
     "flourish_essentials":"Flourish Essentials",
     "contacts":"Contacts",
+    "contacts_description":"Aetherium offre servizi di estetica di base: consulenza cosmetica professionale e cosmetici; trattamenti viso e corpo specifici e personalizzati; depilazione, epilazione definitiva; applicazione di esteche migliorative per mani, piedi e ciglia.",
+    "update_status":"Update Status",
     "time":"Time",
     "opening_hours_of_the_shop":"Opening time",
     "description":"Description",
     "beauty_specialist":"Beauty Specialist",
     "select_client":"Select Client",
+    "select_gender":"Select Gender",
     "email_is_required":"Email is required",
     "name_is_required":"Name is required",
     "surname_is_required":"Surname is required",
     "address_is_required":"Address is Required",
     "number_is_required":"Number is required",
     "number_is_not_valid":"Number is not valid",
+    "add_to_google_calendar":"Add To Google Calendar",
+    "increase_total_duration_by":"Increase",
     "see_all":"See All",
+    "delete_account":"Delete Account",
     "no_appointments":"No appointments",
     "no_events_available":"No Events available",
     "events":"Events",
     "search":"Search",
     "services":"Services",
+    "services_treatments":"Services/Treatments",
     "by":"By",
     "past":"Past",
     "upcomming":"Upcomming",
@@ -102,11 +123,62 @@
     "you_entered_wrong_password":"You entered wrong password",
     "are_you_sure": "Are you Sure?",
     "user_account_will_be_deleted_permanently": "User account will be deleted permanently",
+    "are_you_sure_you_want_to_delete_your_account":"Are you sure you want to delete your account?",
     "yes":"yes",
     "no": "No",
     "user_deleted":"User deleted",
+    "user_updated_successfully":"User updated successfully",
     "appointment_will_be_deleted_permanently":"Appointment will be deleted permanently",
-    "appointment_deleted_successfully":"Appointment deleted successfully"
+    "appointment_deleted_successfully":"Appointment deleted successfully",
+    
+    "increase_total_duration": "Increase total Duration By",
+    "the_input_field_is_empty": "The Input Field is Empty",
+    "duration_increased_by": "Duration Increased by",
+    "minutes":"Minutes",
+    "duration_is_not_updated": "Duration is not updated Something went Wrong",
+    "the_duration_field_is_empty":"The duration Field is Empty",
+    "user_created_successfully":"User Created Successfully",
+    "walkthrough_title_1": "Benvenuto da Aetherium",
+    "walkthrough_description_1": "Ognuno di Noi costruisce la propria identità in un luogo che ci appartiene profondamente: il nostro corpo. Aetherium ha l'obiettivo di offire gli strumenti per farci apprezzare la bellezza della nostra essenza.",
+    "walkthrough_title_2": "Scopri i nostri servizi",
+    "walkthrough_description_2": "Aetherium offre tutti i sevizi dell'estetica di base:   *depilazione ed epilazione definitiva *trattamenti professionali viso e corpo *consigli e applicazioni di estetiche migliorative (mani - piedi - ciglia) *consulenza cosmetica professionale e cosmetici ad personam.",
+    "walkthrough_title_3": "Gestisci la tua esperienza",
+    "walkthrough_description_3": "Tieni monitorati i tuoi appuntamenti, riservane di nuovi. Trova gli eventi che fanno per te e accumula punti per accedere ai listini riservati Aetherium.",
 
+    "Monday":"Monday",
+    "Tuesday":"Tuesday",
+    "Wednesday":"Wednesday",
+    "Thursday":"Thursday",
+    "Friday":"Friday",
+    "Saturday":"Saturday",
+    "Sunday":"Sunday",
+    
+    "Sun":"Sun",
+    "Mon":"Mon",
+    "Tue":"Tue",
+    "Wed":"Wed",
+    "Thu":"Thu",
+    "Fri":"Fri",
+    "Sat":"Sat",
 
+    "January":"January",
+    "February":"February",
+    "March":"March",
+    "April":"April",
+    "May":"May",
+    "June":"June",
+    "July":"July",
+    "August":"August",
+    "September":"September",
+    "October":"October",
+    "November":"November",
+    "December":"December",
+    
+    "app_theme":"App Theme",
+    "Please_select_from_the_following_three_choices":"Please select from the following three choices",
+    "select_date_of_birth":"Select Date of birth",
+    "system_default":"System Default",
+    "dark_theme":"Dark Theme",
+    "light_theme":"Light Theme",
+    "apply":"Apply"
 }
