Fixes App issues

--- a/assets/translations/it.json
+++ b/assets/translations/it.json
@@ -101,7 +101,7 @@
     "contacts": "Contatti",
     "contacts_description": "Aetherium offre servizi di estetica di base: consulenza cosmetica professionale e cosmetici; trattamenti viso e corpo specifici e personalizzati; depilazione, epilazione definitiva; applicazione di esteche migliorative per mani, piedi e ciglia.",
     "update_status": "Aggiorna stato",
-    "time": "Durata",
+    "time": "Ore",
     "opening_hours_of_the_shop": "Orari di apertura",
     "description": "Descrizione",
     "beauty_specialist": "Estetista",
