Fixes design issues

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -206,5 +206,6 @@
     "Sep": "Sep",
     "Oct": "Oct",
     "Nov": "Nov",
-    "Dec": "Dec"
+    "Dec": "Dec",
+    "appointment_saved_correctly": "Appointment Saved"
 }
