add by translation

--- a/assets/translations/it.json
+++ b/assets/translations/it.json
@@ -218,5 +218,6 @@
     "Oct": "Ott",
     "Nov": "Nov",
     "Dec": "Dic",
-    "appointment_saved_correctly": "Appuntamento salvato"
+    "appointment_saved_correctly": "Appuntamento salvato",
+    "By": "Attiva dal"
 }
