add event feature added

--- a/assets/translations/it.json
+++ b/assets/translations/it.json
@@ -1,176 +1,213 @@
 {
-    "select_language": "Seleziona una lingua",
-    "save": "Salva",
-    "you_can_change_language": "puoi cambiare la lingua",
-    "select_a_language": "Seleziona una lingua",
-    "home": "Home",
-    "agenda": "Agenda",
-    "card": "Carta",
-    "back_to_home": "Torna alla home",
+    "app_theme":"Tema app",
+    "Please_select_from_the_following_three_choices":"Seleziona tra le seguenti 3 opzioni",
+    "system_default":"Default",
+    "dark_theme":"Tema scuro",
+    "light_theme":"Tema chiaro",
+    "apply":"Applica",
+    "select_language":"Seleziona una lingua",
+    "save":"Salva",
+    "you_can_change_language":"puoi cambiare la lingua",
+    "select_a_language":"Seleziona una lingua",
+    "home":"Home",
+    "back_to_home":"Torna alla home",
     "change_theme": "Cambia tema",
     "next": "Avanti",
-    "scan": "Scan",
-    "app_name": "Aetherium Saloon",
-    "welcome_to": "Benvenuto in",
+    "scan":"Scan",
+    "app_name":"Aetherium Saloon",
+    "welcome_to":"Benvenuto in",
     "aetherium": "Aetherium",
-    "fragrances_perfumes": "Estetista",
+    "fragrances_perfumes":"Estetiste",
     "appdeo": "Scopri i nostri servizi",
-    "skin_care": "Gestisci la tua esperienza",
-    "avanti": "Avanti",
+    "skin_care":"Gestisci la tua esperienza",
+    "avanti":"Avanti",
     "inzia": "Inzia",
-    "send": "Invia",
-    "sign_in": "Accedi",
+    "invia" : "Invia",
+    "accedi": "Accedi",
     "login": "Login",
-    "email": "Email",
+    "sign_in": "Accedi",
+    "email":"Email",
     "male": "Maschio",
     "female": "Femmina",
     "other": "Altro",
-    "close": "Chiudi",
-    "settings": "Impostazioni",
-    "password": "Passowrd",
-    "forget_password": "Password dimenticata",
-    "forget_password?": "Password dimenticata?",
-    "sign_in_failed": "Accesso fallito",
-    "email_is_not_valid": "Email non valida",
-    "email_should_not_be_empty": "Email non può essere vuota",
-    "password_must_be_8_characters_long": "La password deve contenere almeno 8 caratteri",
-    "a_password_reset_email_has_been_sent_to": "È stata inviata un'e-mail per reimpostare la password a",
-    "email_already_in_use": "Email già in uso",
-    "user_not_found": "Utente non trovato",
-    "welcome": "Benvenuto",
+    "password": "Password",
+    "forget_password":"Password dimenticata",
+    "email_is_not_valid":"Email non valida",
+    "email_should_not_be_empty":"Email non può essere vuota",
+    "welcome":"Benvenuto",
     "loyality_card": "Loyality Card",
-    "points": "Punti",
-    "points_collected": "Punti collezionati",
-    "active": "Attivo",
-    "telephone": "Telefono",
-    "name": "Nome",
-    "surname": "Cognome",
-    "level": "Livello",
-    "date": "Data",
-    "expiray_date": "Data di scadenza",
-    "invite_friends": "Invita i tuoi amici",
-    "invitation_description": "Porta un amico in negozio per ricevere 25 punti",
-    "my_appointments": "I miei appuntamenti",
-    "upcomming_appointments": "Prossimi appuntamenti",
-    "new_client": "Nuovo cliente",
-    "client_details": "Dettagli cliente",
-    "settigns": "Impostazioni",
-    "consultations": "Consultazioni",
-    "notifications": "Notifiche",
-    "account_info_detail": "le mie informazioni",
-    "my_information": "le mie informazioni",
-    "logout": "Logout",
-    "profile": "Profilo",
-    "terms_of_services": "Termini di servizio",
-    "privacy": "Privacy",
-    "phone+_number": "Phone Number",
-    "gender": "Genere",
-    "address": "Indirizzo",
-    "birthday": "Compleanno",
-    "appointments": "Appuntamenti",
-    "number": "Numero",
-    "appointment_description": "Scopri e prenota i professionisti della bellezza e del benessere più vicini a voi. Gli appuntamenti programmati verranno visualizzati qui.",
-    "empty_agenda_message": "Clicca sul pulsante in basso a destra per effettuare una nuova prenotazione. Per qualsiasi dubbio o domanda, contattateci via e-mail o WhatsApp, potete trovare tutte le informazioni nella sezione contatti, accedendo dal vostro profilo utente.",
-    "service_treatments": "Servizi/Trattamenti",
-    "service_details": "Dettagli del servizio",
-    "choose_date_and_time": "Scegli data e ora",
-    "available_slot": "Slot disponibili",
-    "added_appointmetns": "Appuntamenti aggiunti",
-    "confirm_appointment": "Conferma appuntamento",
-    "confirm": "Conferma",
-    "congratulations": "Congratulazioni",
-    "your_appointment": "Il tuo appuntamento",
-    "client_creating_message_I": "Il tuo cliente è stato creato,",
-    "client_creation_message_II": "Ben fatto",
-    "booking_is_successfull": "Prenotazione effettuata",
-    "appointment_details": "Appuntamenti - Dettagli",
-    "service_treatment_duration": "Trattamento",
-    "service_treatment_category": "Categoria Trattamento",
-    "price": "Prezzo",
-    "tier": "Tier",
-    "total_price": "Prezzo totale",
-    "total": "Totale",
-    "shop_phone": "Numero Negozio",
-    "notes": "Note:",
-    "note": "Note",
-    "cancel": "Annulla",
-    "edit": "Modifica",
-    "not_a_valid_number": "Numero non valido",
-    "phone_is_required": "Il telefono è obbligatorio",
-    "flourish_essentials": "Flourish Essentials",
-    "contacts": "Contatti",
-    "contacts_description": "Aetherium offre servizi di estetica di base: consulenza cosmetica professionale e cosmetici; trattamenti viso e corpo specifici e personalizzati; depilazione, epilazione definitiva; applicazione di esteche migliorative per mani, piedi e ciglia.",
-    "update_status": "Aggiorna stato",
-    "time": "Ore",
-    "opening_hours_of_the_shop": "Orari di apertura",
-    "description": "Descrizione",
-    "beauty_specialist": "Estetista",
-    "select_client": "Seleziona cliente",
-    "select": "Seleziona",
-    "select_gender": "Selezionare genere",
-    "email_is_required": "Email obbligatoria",
-    "name_is_required": "Nome obbligatorio",
-    "surname_is_required": "Cognome obbligatorio",
-    "address_is_required": "Indirizzo obbligatorio",
-    "number_is_required": "Numero obbligatorio",
-    "number_is_not_valid": "Numero non valido",
-    "see_all": "Vedi tutti",
-    "no_appointments": "Nessun appuntamento",
-    "no_events_available": "Nessun evento",
-    "add_to_google_calendar": "Aggiungi a Google Calendar",
-    "increase_total_duration_by": "Aumento",
-    "events": "Eventi",
-    "search": "Cerca",
-    "services": "Servizi",
-    "services_treatments": "Servizi/Trattamenti",
-    "by": "da",
-    "past": "Passati",
-    "upcomming": "Prossimi",
-    "scheduled_appointments": "Appuntamenti prenotati",
-    "no_consultations": "Nessuna consultazione",
+    "points_collected":"Punti collezionati",
+    "active":"Attivo",
+    "name":"Nome",
+    "surname":"Cognome",
+    "level":"Livello",
+    "expiray_date":"Data di scadenza",
+    "invite_friends":"Invita i tuoi amici",
+    "invitation_description":"Porta un amico in negozio per ricevere 25 punti",
+    "my_appointments":"I miei appuntamenti",
+    "upcomming_appointments":"Prossimi appuntamenti",
+    "new_client":"Nuovo cliente",
+    "client_details":"Dettagli cliente",
+    "service_details":"Dettaglio servizio",
+    "settigns":"Impostazioni",
+    "consultations":"Consultazioni",
+    "notifications":"Notifiche",
+    "account_info_detail":"Le mie info",
+    "logout":"Esci",
+    "profile":"Profilo",
+    "terms_of_services":"Termini di Servizio",
+    "privacy":"Privacy",
+    "phone_number":"Numero di telefono",
+    "gender":"Genere",
+    "address":"Indirizzo",
+    "birthday":"Data di nascita",
+    "appointments":"Appuntamenti",
+    "appointment_description":"Scopri e prenota i professionisti della bellezza e del benessere più vicini a voi. Gli appuntamenti programmati verranno visualizzati qui.",
+    "empty_agenda_message":"Clicca sul pulsante in basso a destra per effettuare una nuova prenotazione. Per qualsiasi dubbio o domanda, contattateci via e-mail o WhatsApp, potete trovare tutte le informazioni nella sezione contatti, accedendo dal vostro profilo utente.",
+    "service_treatments":"Servizi/Trattamenti",
+    "choose_date_and_time":"Scegli data e ora",
+    "available_slot":"Slot disponibili",
+    "added_appointmetns":"Appuntamenti aggiunti",
+    "confirm_appointment":"Conferma appuntamento",
+    "congratulations":"Congratulazioni",
+    "your_appointment":"Il tuo appuntamento",
+    "client_creating_message_I":"Il tuo cliente è stato creato,",
+    "client_creation_message_II":"Ben fatto",
+    "booking_is_successfull":"Prenotazione effettuata",
+    "appointment_details":"Appuntamenti - Dettagli",
+    "service_treatment_duration":"Trattamento",
+    "service_treatment_category":"Categoria Trattamento",
+    "price":"Prezzo",
+    "total_price":"Prezzo totale",
+    "shop_phone":"Numero Negozio",
+    "notes":"Note:",
+    "cancel":"Annulla",
+    "edit":"Modifica",
+    "flourish_essentials":"Flourish Essentials",
+    "contacts":"Contatti",
+    "time":"Ore",
+    "opening_hours_of_the_shop":"Orari di apertura",
+    "description":"Descrizione",
+    "beauty_specialist":"Estetista",
+    "select_client":"Seleziona cliente",
+    "email_is_required":"Email obbligatoria",
+    "name_is_required":"Nome obbligatorio",
+    "surname_is_required":"Cognome obbligatorio",
+    "address_is_required":"Indirizzo obbligatorio",
+    "number_is_required":"Numero obbligatorio",
+    "number_is_not_valid":"Numero non valido",
+    "see_all":"Vedi tutti",
+    "no_appointments":"Nessun appuntamento",
+    "no_events_available":"Nessun evento",
+    "events":"Eventi",
+    "search":"Cerca",
+    "services":"Servizi",
+    "by":"da",
+    "past":"Passati",
+    "upcomming":"Prossimi",
+    "scheduled_appointments":"Appuntamenti prenotati",
+    "no_consultations":"Nessuna consultazione",
     "login_successfull": "Credenziali corrette",
-    "you_entered_wrong_password": "La password è errata",
+    "you_entered_wrong_password":"La password è errata",
     "are_you_sure": "Sei sicuro?",
-    "user_account_will_be_deleted_permanently": "L'utente verrà eliminato definitivamente",
-    "are_you_sure_you_want_to_delete_your_account": "Sei sicuro di voler eliminare il tuo account?",
-    "yes": "Si",
+    "user_account_will_be_deleted_permanently": "L'utente verrà eliminato definitivamente, confermi?",
+    "yes":"Si",
     "no": "No",
-    "delete_account": "Eliminare l'account",
-    "user_deleted": "Utente eliminato",
-    "user_updated_sccessfully": "Utente aggiornato con successo",
-    "appointment_will_be_deleted_permanently": "L'appuntamento verrà eliminato definitivamente",
-    "appointment_deleted_successfully": "Appuntamento eliminato correttamente",
-    "increase_total_duration": "Aumento",
-    "the_input_field_is_empty": "Il campo è vuoto",
-    "duration_increased_by": "Durata aumentata di",
-    "minutes": "Minuti",
-    "duration_is_not_updated": "La durata non è stata aggiornata, qualcosa è andato storto",
-    "the_duration_field_is_empty": "il campo durata è vuoto",
-    "user_created_successfully": "Utente creato con successo",
+    "user_deleted":"Utente eliminato",
+    "appointment_will_be_deleted_permanently":"L'appuntamento verrà eliminato definitivamente",
+    "appointment_deleted_successfully":"Appuntamento eliminato correttamente",
     "walkthrough_title_1": "Benvenuto da Aetherium",
     "walkthrough_description_1": "Ognuno di Noi costruisce la propria identità in un luogo che ci appartiene profondamente: il nostro corpo. Aetherium ha l'obiettivo di offire gli strumenti per farci apprezzare la bellezza della nostra essenza.",
     "walkthrough_title_2": "Scopri i nostri servizi",
     "walkthrough_description_2": "Aetherium offre tutti i sevizi dell'estetica di base:   *depilazione ed epilazione definitiva *trattamenti professionali viso e corpo *consigli e applicazioni di estetiche migliorative (mani - piedi - ciglia) *consulenza cosmetica professionale e cosmetici ad personam.",
     "walkthrough_title_3": "Gestisci la tua esperienza",
     "walkthrough_description_3": "Tieni monitorati i tuoi appuntamenti, riservane di nuovi. Trova gli eventi che fanno per te e accumula punti per accedere ai listini riservati Aetherium.",
-    "Monday": "Lunedi",
-    "Tuesday": "Martedi",
+    "increase_total_duration": "Aumenta durata totale di",
+    "the_input_field_is_empty": "Il campo è vuoto",
+    "duration_increased_by": "Durata aumentata di",
+    "minutes":"Minuti",
+    "duration_is_not_updated": "La durata non è stata aggiornata, qualcosa è andato storto",
+    "the_duration_field_is_empty":"il campo durata è vuoto",
+    "some_notes": "Delle Note",
+    "fragrances_and_perfumes": "Estetista",
+    "Monday": "Lunedì",
+    "Tuesday": "Martedì",
     "Wednesday": "Mercoledì",
     "Thursday": "Giovedì",
-    "Friday": "venerdì",
+    "Friday": "Venerdì",
     "Saturday": "Sabato",
     "Sunday": "Domenica",
-    "Mon": "Lun",
-    "Tue": "Mar",
-    "Wed": "Mer",
-    "Thu": "Gio",
-    "Fri": "Ven",
-    "Sat": "Sab",
-    "Sun": "Dom",
+    "mon": "Lun",
+    "tue": "Mar",
+    "wed": "Mer",
+    "thu": "Gio",
+    "fri": "Ven",
+    "sat": "Sab",
+    "sun": "Dom",
+    "close": "Chiudi",
+    "duration": "Durata",
+    "duration_empty": "Il campo durata è vuoto",
+    "duration_increased": "La durata è aumentata di",
+    "notifications_read": "Tutte le notifiche sono state lette",
+    "no_time_slots": "Nessuno slot disponibile, selezionare un'altra data",
+    "total": "Totale",
+    "date": "Data",
+    "appointment_delete": "L'appuntamento verrà eliminato permanentemente",
+    "delete_confirm": "Sei sicuro?",
+    "increase": "Aumenta",
+    "appointment_new_added": "ha aggiunto un nuovo appuntamento",
+    "new_appointment": "Nuovo appuntamento",
+    "no_timeslot_selected":"Prime di procedere, seleziona un'orario",
+    "jan": "Gen",
+    "feb": "Feb",
+    "mar": "Mar",
+    "apr": "Apr",
+    "may": "Mag",
+    "jun": "Giu",
+    "jul": "Lug",
+    "aug": "Ago",
+    "sep": "Set",
+    "oct": "Ott",
+    "nov": "Nov",
+    "dec": "Dic",
+    "january": "Gennaio",
+    "february": "Febbraio",
+    "march": "Marzo",
+    "april": "aprile",
+    "may": "Maggio",
+    "june": "Giugno",
+    "july": "Luglio",
+    "august": "Agosto",
+    "september": "Settembre",
+    "october": "Ottobre",
+    "november": "Novembre",
+    "december": "Dicembre",
+    "loyalty_card_points": "Punti card",
+    "client_tier": "Tier",
+    "delete_account": "Elimina il mio utente",
+    "password_must_be_8_characters_long":"La password deve contenere almeno 6 caratteri",
+    "my_information":"Le mie info",
+    "confirm": "Conferma",
+    "notification_permit": "Permetti ad Aetherium di inviarti notifiche dei tuoi appuntamenti",
+    "allow": "Concedi",
+    "no_allow": "Rifiuta",
+    "we_created_new_appointment": "Abbiamo creato un nuovo appuntamento per te",
+    "card_label": "Carta",
+    "agenda_label": "Agenda",
+    "appointment_past": "Questo è un centro estetico, non una macchina del tempo",
+    "add_to_google_calendar": "Aggiungi a Calendario",
+    "notification_settings": "Impostazioni notifiche",
+    "allow_notification": "Concedi accesso",
+    "appointment": "Appuntamento",
+    "points": "Punti",
+    "location": "Luogo",
+    "start_time": "Inizio",
+    "end_time": "FIne",
+    "hours": "ore",
     "January": "Gennaio",
     "February": "Febbraio",
     "March": "Marzo",
-    "April": "Aprile",
+    "April": "aprile",
     "May": "Maggio",
     "June": "Giugno",
     "July": "Luglio",
@@ -179,45 +216,17 @@
     "October": "Ottobre",
     "November": "Novembre",
     "December": "Dicembre",
-    "app_theme": "Tema app",
-    "Please_select_from_the_following_three_choices": "Seleziona tra le seguenti 3 opzioni",
-    "select_date_of_birth": "Seleziona Data di nascita",
-    "system_default": "Default",
-    "dark_theme": "Tema scuro",
-    "light_theme": "Tema chiaro",
-    "apply": "Applica",
-    "some_notes": "Delle Note",
-    "fragrances_and_perfumes": "Estetista",
-    "location": "Posizione",
-    "start_time": "Inizio",
-    "end_time": "Fine",
-    "appointment_past": "questo è un centro estetico, non una macchina del tempo",
-    "increase": "Aumenta",
-    "duration": "Orario",
-    "duration_empty": "Il campo durata è vuoto",
-    "duration_increased": "La durata è aumentata di",
-    "notifications_read": "Tutte le notifiche sono state lette",
-    "no_time_slots": "Nessuno slot disponibile, selezionare un'altra data",
-    "appointment_delete": "L'appuntamento verrà eliminato permanentemente",
-    "delete_confirm": "Sei sicuro?",
-    "appointment": "Appuntamento",
-    "new_appointment": "Nuovo appuntamento",
-    "appointment_new_added": "ha aggiunto un nuovo appuntamento",
-    "appointment_new_added_successfully": "ha aggiunto un nuovo appuntamento",
-    "we_created_new_appointment": "abbiamo creato per te un nuovo appuntamento.",
-    "no_timeslot_selected": "Prime di procedere, seleziona un'orario",
-    "Gen": "Gen",
-    "Feb": "Feb",
-    "Mar": "Mar",
-    "Apr": "Apr",
-    "May": "Mag",
-    "Jun": "Giu",
-    "Jul": "Lug",
-    "Aug": "Ago",
-    "Sep": "Set",
-    "Oct": "Ott",
-    "Nov": "Nov",
-    "Dec": "Dic",
-    "appointment_saved_correctly": "Appuntamento salvato",
-    "By": "Attiva dal"
+    "title": "Titolo",
+    "place": "Luogo",
+    "long": "Longitudine",
+    "lat": "Latitudine",
+    "invited": "Invitati",
+    "event_successfully_added": "Evento aggiunto con successo",
+    "image_is_required": "L'immagine è obbligatoria",
+    "subtitle_is_required": "È richiesto il sottotitolo",
+    "description_is_required": "La descrizione è obbligatoria",
+    "subtitle": "Sottotitolo",
+    "start": "Inizio",
+    "end": "FINE",
+    "end_date_cannot_be_smaller_than_start_date": "La data di fine non può essere inferiore alla data di inizio"
 }
